# mcp-gdb-server

./: .gitignore  Cargo.toml  README.md  README_ja.md  flake.nix
src/: main.rs
src/gdb/: client.rs  mod.rs  parser.rs  types.rs
src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
test/: hello  hello.c  hello_nodebug
